Fix Publish Forms -- consolidate CSS a little https://linear.app/statamic/issue/ST-648/publish-forms-50percent-width-field-is-stretching-the-full-width-of

--- a/resources/css/components/publish.css
+++ b/resources/css/components/publish.css
@@ -53,29 +53,19 @@ code.parent-url {
 
     .form-group {
         grid-column: span var(--col-span, var(--grid-columns));
-
-        @variant lg {
-            &.field-w-25  { --col-span: calc(var(--grid-columns) * 0.25); }
-            &.field-w-33  { --col-span: calc(var(--grid-columns) * 0.333); }
-            &.field-w-50  { --col-span: calc(var(--grid-columns) * 0.5); }
-            &.field-w-66  { --col-span: calc(var(--grid-columns) * 0.666); }
-            &.field-w-75  { --col-span: calc(var(--grid-columns) * 0.75); }
-            &.field-w-undefined, .field-w-100 { --col-span: calc(var(--grid-columns) * 1); }
-        }
     }
+}
+@variant lg {
+    .field-w-25  { --col-span: calc(var(--grid-columns) * 0.25); }
+    .field-w-33  { --col-span: calc(var(--grid-columns) * 0.333); }
+    .field-w-50  { --col-span: calc(var(--grid-columns) * 0.5); }
+    .field-w-66  { --col-span: calc(var(--grid-columns) * 0.666); }
+    .field-w-75  { --col-span: calc(var(--grid-columns) * 0.75); }
+    .field-w-undefined, .field-w-100 { --col-span: calc(var(--grid-columns) * 1); }
 }
 /* GROUP PUBLISH COMPONENT / FIELD GRID (e.g. BLUEPRINT)
 =================================================== */
 .field-grid {
-    @variant lg {
-        .field-w-25  { --col-span: calc(var(--grid-columns) * 0.25); }
-        .field-w-33  { --col-span: calc(var(--grid-columns) * 0.333); }
-        .field-w-50  { --col-span: calc(var(--grid-columns) * 0.5); }
-        .field-w-66  { --col-span: calc(var(--grid-columns) * 0.666); }
-        .field-w-75  { --col-span: calc(var(--grid-columns) * 0.75); }
-        .field-w-undefined, .field-w-100 { --col-span: calc(var(--grid-columns) * 1); }
-    }
-
     > * {
         grid-column: span var(--col-span, var(--grid-columns));
     }
